@@ -1,11 +1,11 @@
 {
-  "count": 30,
-  "uniques": 4,
+  "count": 29,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-10-24T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-11-06T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-07T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
