@@ -1,3 +1,12 @@
+2023-11-07T08:16:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6781721099 # 2058
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
+* notice: last 14d: unq all: 3 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 1351 3250 / 1368 3280
+* notice: next accum: outdated-unq outdated-all / unq all: 1351 3250 / 1369 3281
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-24 2023-11-07]
+
 2023-11-07T00:59:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6778535455 # 2057
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
